! mobiles: /articles/ elimination of submenu distortion bug

--- a/frontend/static/frontend/css/mobile/article.css
+++ b/frontend/static/frontend/css/mobile/article.css
@@ -102,7 +102,6 @@
 
 		table
 		{
-			border: 1px solid white;
 			margin: 1.5em 0;
 		}
 
