--- a/frontend/static/frontend/css/mobile/base.css
+++ b/frontend/static/frontend/css/mobile/base.css
@@ -109,7 +109,6 @@
 				width: 75%;
 				vertical-align: middle;
 				text-align: center;
-				font-size: 8em;
 			}
 
 			#header #submenu #sections table
